<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/category_base"
        app:iconSpaceReserved="false">
        <SwitchPreference
            android:key="hide_from_recent"
            android:title="@string/switch_hide_recent"
            android:summary="@string/switch_hide_recent_summary"
            app:iconSpaceReserved="false"/>
        <com.sunshine.freeform.ui.view.IntegerSimpleMenuPreference
            app:entries="@array/service_type"
            app:entryValues="@array/service_type_value"
            android:key="service_type"
            android:title="@string/service_type_title"
            android:summary="@string/service_type_summary"
            app:iconSpaceReserved="false"/>

        <com.sunshine.freeform.ui.view.IntegerSimpleMenuPreference
            android:key="backend_mode"
            android:title="@string/backend_mode_title"
            android:summary="@string/backend_mode_summary"
            app:defaultValue="0"
            app:entries="@array/backend_mode"
            app:entryValues="@array/backend_mode_value"
            app:iconSpaceReserved="false"/>

        <com.sunshine.freeform.ui.view.IntegerSimpleMenuPreference
            android:key="standalone_window_size"
            android:title="@string/standalone_window_size_title"
            android:summary="@string/standalone_window_size_summary"
            app:defaultValue="0"
            app:entries="@array/standalone_window_size"
            app:entryValues="@array/standalone_window_size_value"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="standalone_open_developer_options"
            android:title="@string/standalone_dev_options_title"
            android:summary="@string/standalone_dev_options_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="reset_overlay_setting"
            app:title="@string/preference_reset_overlay_setting"
            android:summary="@string/preference_reset_overlay_setting_summary"
            app:iconSpaceReserved="false"/>
        <Preference
            android:key="reset_all_windows"
            android:title="@string/reset_all_windows"
            android:summary="@string/reset_all_windows_summary"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_freeform"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            android:key="freeform_scale"
            android:title="@string/setting_freeform_dpi_title"
            app:iconSpaceReserved="false"
            app:defaultValue="50"
            app:min="50"
            android:max="500"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="freeform_size"
            android:title="@string/pref_freeform_size_title"
            app:iconSpaceReserved="false"
            app:defaultValue="75"
            app:min="10"
            android:max="100"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="freeform_size_land"
            android:title="@string/pref_freeform_size_land_title"
            app:iconSpaceReserved="false"
            app:defaultValue="90"
            app:min="10"
            android:max="100"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="freeform_float_view_size"
            android:title="@string/pref_freeform_float_view_size_title"
            app:iconSpaceReserved="false"
            app:defaultValue="20"
            app:min="10"
            android:max="50"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="freeform_dimming_amount"
            android:title="@string/pref_freeform_dimming_amount_title"
            app:iconSpaceReserved="false"
            app:defaultValue="20"
            app:min="0"
            android:max="100"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="float_trigger_ratio"
            android:title="@string/pref_float_trigger_ratio_title"
            android:summary="@string/pref_float_trigger_ratio_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="90"
            app:min="50"
            android:max="95"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="full_trigger_ratio"
            android:title="@string/pref_full_trigger_ratio_title"
            android:summary="@string/pref_full_trigger_ratio_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="105"
            app:min="100"
            android:max="130"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="max_freeform_windows"
            android:title="@string/pref_max_freeform_windows_title"
            android:summary="@string/pref_max_freeform_windows_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="5"
            app:min="1"
            android:max="10"
            app:showSeekBarValue="true"/>

        <SwitchPreference
            android:key="lock_resize_ratio"
            android:title="@string/pref_lock_resize_ratio_title"
            android:summary="@string/pref_lock_resize_ratio_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="secure_virtual_display"
            android:title="@string/secure_virtual_display_title"
            android:summary="@string/secure_virtual_display_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="remember_freeform_position"
            android:title="@string/remember_position_title"
            android:summary="@string/remember_position_summary"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="remember_freeform_size"
            android:title="@string/pref_remember_freeform_size_title"
            android:summary="@string/pref_remember_freeform_size_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="use_sui_refuse_to_fullscreen"
            android:title="@string/use_sui_refuse_to_fullscreen_title"
            android:summary="@string/use_sui_refuse_to_fullscreen_summary"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="manual_adjust_freeform_rotation"
            android:title="@string/manual_adjust_freeform_rotation_title"
            android:summary="@string/manual_adjust_freeform_rotation_summary"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="enable_suspend_mode"
            android:title="@string/pref_enable_suspend_mode_title"
            android:summary="@string/pref_enable_suspend_mode_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="enable_destroy_anim"
            android:title="@string/pref_enable_destroy_anim_title"
            android:summary="@string/pref_enable_destroy_anim_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_gesture"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="enable_swipe_back"
            android:title="@string/pref_enable_swipe_back_title"
            android:summary="@string/pref_enable_swipe_back_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="swipe_back_indicator_alpha"
            android:title="@string/pref_swipe_back_indicator_alpha_title"
            android:summary="@string/pref_swipe_back_indicator_alpha_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="80"
            app:min="0"
            android:max="100"
            app:showSeekBarValue="true"/>

        <SwitchPreference
            android:key="enable_swipe_home"
            android:title="@string/pref_enable_swipe_home_title"
            android:summary="@string/pref_enable_swipe_home_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="enable_swipe_forward"
            android:title="@string/pref_enable_swipe_forward_title"
            android:summary="@string/pref_enable_swipe_forward_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="enable_shake_minimize"
            android:title="@string/pref_enable_shake_minimize_title"
            android:summary="@string/pref_enable_shake_minimize_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="gesture_edge_width"
            android:title="@string/pref_gesture_edge_width_title"
            android:summary="@string/pref_gesture_edge_width_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="60"
            app:min="20"
            android:max="120"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="gesture_min_distance"
            android:title="@string/pref_gesture_min_distance_title"
            android:summary="@string/pref_gesture_min_distance_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="100"
            app:min="50"
            android:max="300"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="shake_threshold"
            android:title="@string/pref_shake_threshold_title"
            android:summary="@string/pref_shake_threshold_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="12"
            app:min="6"
            android:max="30"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_appearance"
        app:iconSpaceReserved="false">

        <SeekBarPreference
            android:key="window_opacity"
            android:title="@string/pref_window_opacity_title"
            android:summary="@string/pref_window_opacity_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="100"
            app:min="20"
            android:max="100"
            app:showSeekBarValue="true"/>

        <SeekBarPreference
            android:key="corner_radius"
            android:title="@string/pref_corner_radius_title"
            android:summary="@string/pref_corner_radius_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="0"
            app:min="0"
            android:max="50"
            app:showSeekBarValue="true"/>

        <SwitchPreference
            android:key="show_top_bar"
            android:title="@string/show_top_bar_title"
            android:summary="@string/show_top_bar_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="animation_speed"
            android:title="@string/animation_speed_title"
            android:summary="@string/animation_speed_summary"
            app:defaultValue="100"
            app:min="50"
            android:max="200"
            app:showSeekBarValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_performance"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="auto_close_screen_off"
            android:title="@string/pref_auto_close_screen_off_title"
            android:summary="@string/pref_auto_close_screen_off_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="auto_minimize_on_call"
            android:title="@string/pref_auto_minimize_on_call_title"
            android:summary="@string/pref_auto_minimize_on_call_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="lock_window_position"
            android:title="@string/pref_lock_window_position_title"
            android:summary="@string/pref_lock_window_position_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <SwitchPreference
            android:key="tap_outside_to_close"
            android:title="@string/pref_tap_outside_to_close_title"
            android:summary="@string/pref_tap_outside_to_close_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_utilities"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="snap_to_edge"
            android:title="@string/pref_snap_to_edge_title"
            android:summary="@string/pref_snap_to_edge_summary"
            app:defaultValue="true"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_floating"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="show_floating"
            android:title="@string/switch_floating"
            android:summary="@string/switch_floating_summary"
            app:iconSpaceReserved="false"/>

        <com.sunshine.freeform.ui.view.IntegerSimpleMenuPreference
            app:entries="@array/floating_show_position"
            app:entryValues="@array/floating_show_position_value"
            android:key="floating_position_x"
            android:title="@string/menu_floating_position"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="quick_floating_app"
            app:title="@string/preference_quick_floating_app"
            android:summary="@string/preference_quick_floating_app_summary"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="floating_alpha"
            android:title="@string/floating_alpha_title"
            app:iconSpaceReserved="false"
            app:defaultValue="10"
            app:min="0"
            android:max="10"
            app:showSeekBarValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_taskbar"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="enable_taskbar"
            android:title="@string/pref_enable_taskbar_title"
            android:summary="@string/pref_enable_taskbar_summary"
            app:defaultValue="false"
            app:iconSpaceReserved="false"/>

        <com.sunshine.freeform.ui.view.IntegerSimpleMenuPreference
            android:key="taskbar_position"
            android:title="@string/taskbar_position_title"
            android:summary="@string/taskbar_position_summary"
            app:defaultValue="0"
            app:entries="@array/taskbar_position"
            app:entryValues="@array/taskbar_position_value"
            app:iconSpaceReserved="false"/>

        <SeekBarPreference
            android:key="taskbar_max_recents"
            android:title="@string/taskbar_max_recents_title"
            android:summary="@string/taskbar_max_recents_summary"
            app:iconSpaceReserved="false"
            app:defaultValue="6"
            app:min="3"
            android:max="10"
            app:showSeekBarValue="true"/>

        <Preference
            android:key="taskbar_usage_access"
            android:title="@string/taskbar_usage_access_title"
            android:summary="@string/taskbar_usage_access_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/category_notify"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="notify_freeform"
            android:title="@string/switch_notify_freeform"
            android:summary="@string/switch_notify_freeform_summary"
            app:iconSpaceReserved="false"/>

        <Preference
            android:key="notification_freeform_apps"
            app:title="@string/preference_notification_apps"
            android:summary="@string/preference_notification_apps_summary"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>
